--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,6 @@
 0.2.1
-- Many improvements
-- Now with an optional dependency (requests) - RECOMMENDED
+- Improvements
+- Now with an optional dependency (requests) - installed as an extra [requests] (strongly recommended)
 
 0.2
 - Completely rewritten!
